Fix sizing and alignment on bookCards
Change flex justify-content to space-around
Adjust bookCard size

--- a/style.css
+++ b/style.css
@@ -40,13 +40,14 @@ body {
     border: thick solid red; /* placeholder */
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-around;
 }
 
 /* book card styling */
 .bookCard {
     background-color: #fff;
     border: thick solid blue; /* placeholder */
-    width: 350px;
+    width: 325px;
     height: 400px;
     border-radius: 10px;
     border-left: 0.5em solid #282A38; /* colored left border; placeholder color */
